[tool.poetry]
name = "driver_serivce"
version = "0.1.0"
description = ""
authors = ["Conduit.app <support@cndt.app>"]

[tool.poetry.dependencies]
python = "~3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
