[tool.poetry]
name = "driver_serivce"
version = "0.1.0"
description = ""
authors = ["Conduit.app <support@cndt.app>"]

[tool.poetry.dependencies]
python = "~3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
tzdata = "*"

[tool.poetry.group.dev.dependencies]
black = "^21.12b0"
isort = "^5.10.1"
ipython = "^8.3.0"

[tool.isort]
profile = "hug"
src_paths = ["project"]
line_length = 120

[tool.black]
skip-string-normalization = true
line-length = 120
target-version = ["py39"]

[build-system]
requires = ["poetry-core==1.2.*"]
build-backend = "poetry.core.masonry.api"
